CloudConsulting/force-app/main/default/objects/Opportunity/fields/End_Proyect_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Proyect_Date__c</fullName>
    <label>End Proyect Date</label>
    <type>Date</type>
</CustomField>