CloudConsulting/force-app/main/default/objects/Opportunity/fields/Start_Proyect_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Proyect_Date__c</fullName>
    <label>Start Proyect Date</label>
    <type>Date</type>
</CustomField>