CloudConsulting/force-app/main/default/objects/Opportunity/validationRules/verify_PM.validationRule-meta.xml
<ValidationRule>
    <fullName>verify_PM</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(ProjectManager__c )</errorConditionFormula>
    <errorDisplayField>ProjectManager__c</errorDisplayField>
    <errorMessage>You must assign Project Manager</errorMessage>
</ValidationRule>